doc: make the sidebar more compact
There is generous spacing in the sidebar, too generous.

So, reduce it to something more compact, which will also
allow more entries without scrolling.

Signed-off-by: Luc Van Oostenryck <luc.vanoostenryck@gmail.com>

--- a/Documentation/sphinx/static/theme_overrides.css
+++ b/Documentation/sphinx/static/theme_overrides.css
@@ -1,3 +1,7 @@
+.wy-menu-vertical a, .wy-menu-vertical li.current > a, .wy-menu-vertical p.caption {
+	padding: 0.2em 1.2em;
+}
+
 .wy-side-nav-search > a img.logo {
 	width: 60%;
 }
